igw.tf
#
# internet gateway creation
#
resource "aws_internet_gateway" "igw1" {
  vpc_id = aws_vpc.vpc1.id

  tags = {
    Name = "${var.userid}-igw1"
  }
}
